# magoodgan

./: .gitignore  README.md  docker-compose.yml
backend/: backend.Dockerfile  manage.py  pyproject.toml
backend/apps/board/: models.py  serializers.py  urls.py  views.py
backend/apps/board/migrations/: 0001_initial.py
backend/apps/user/: models.py  serializers.py  urls.py  views.py
backend/apps/user/migrations/: 0001_initial.py
backend/common/: generics.py  mixins.py  utils.py
backend/config/: asgi.py  exceptions.py  pagination.py  renderers.py  urls.py  wsgi.py
backend/config/settings/: settings.py
backend/magoodgan/: asgi.py  exceptions.py  generics.py  mixins.py  settings.py  urls.py  utils.py  wsgi.py
backend/user/: models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
frontend/: .env  .eslintrc.json  .prettierrc.json  frontend.Dockerfile  package-lock.json  package.json
frontend/components/: Layout.tsx
frontend/components/board/: General.tsx  Notice.tsx  Post.tsx
frontend/components/main/: Photo.tsx  Title.tsx  Top3.tsx  Top3WithCategory.tsx  WritingList.tsx
frontend/hooks/: useInput.ts  useInputs.ts
frontend/lib/api/: auth.ts  (+2 more)
frontend/pages/: _app.tsx  category.tsx  index.tsx
frontend/store/: auth.ts  index.ts
frontend/styles/: Board.module.scss  Join.module.scss  Login.module.scss  Main.module.scss  Organisms.module.scss  Post.module.scss  _variables.scss  globals.css
frontend/types/: auth.d.ts  board.d.ts  join.d.ts  user.d.ts
nginx/: magoodgan.cf  magoodgan.conf  nginx.Dockerfile  nginx.conf
(+26 files in other folders)
