[tool.poetry]
name = "magoodgan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.8"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
django-storages = "^1.12.3"
django-model-utils = "^4.2.0"
mysqlclient = "^2.1.1"
paramiko = "^2.11.0"
Pillow = "^9.2.0"
djangorestframework-simplejwt = "^5.2.0"
boto3 = "^1.24.46"
drf-yasg = "^1.21.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
